--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   path_provider: ^2.0.11
   flutter_svg: ^1.1.6
   flutter_easyloading: ^3.0.5
+  carousel_indicator: ^1.0.6
+  liquid_swipe: ^3.0.0
+  smooth_star_rating: ^1.1.1
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
