--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.webviewtest">
    <application
-        android:label="Shopdunktest"
+        android:label="ShopDunk"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
