--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   equatable: ^2.0.5
   dio: ^4.0.6
   flutter_rating_bar: ^4.0.1
+  intl: ^0.18.0
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
