--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  webview_flutter: ^3.0.4
+  webview_flutter: ^4.0.2
+  webview_flutter_android: ^3.2.4
+  webview_flutter_wkwebview: ^3.0.5
   path_provider: ^2.0.11
   flutter_svg: ^1.1.6
   flutter_easyloading: ^3.0.5
