--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   intl: ^0.18.0
   shared_preferences: ^2.0.17
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
