--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.18.0
   shared_preferences: ^2.0.17
   logger: ^1.1.0
+  flutter_html: ^0.11.1
 
 dev_dependencies:
   flutter_test:
