--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   shared_preferences: ^2.0.17
   logger: ^1.1.0
   flutter_html: ^3.0.0-alpha.6
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
