--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   logger: ^1.1.0
   flutter_html: ^3.0.0-alpha.6
   youtube_player_flutter: ^8.1.2
+  html: ^0.15.2
 
 dev_dependencies:
   flutter_test:
@@ -99,9 +100,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Arial
+    - family: ArialCustom
       fonts:
-        - asset: assets/fonts/arial.ttf
+        - asset: assets/fonts/ARIAL.TTF
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
