--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,9 +51,11 @@ dependencies:
   intl: ^0.18.0
   shared_preferences: ^2.0.17
   logger: ^1.1.0
-  flutter_html: ^3.0.0-alpha.6
+  flutter_html: ^3.0.0-beta.1
   youtube_player_flutter: ^8.1.2
   html: ^0.15.2
+  flutter_html_all: ^3.0.0-beta.1
+
 
 dev_dependencies:
   flutter_test:
