--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  webview_flutter: ^4.0.2
+  webview_flutter: ^4.2.1
   webview_flutter_android: ^3.2.4
   webview_flutter_wkwebview: ^3.0.5
-  path_provider: ^2.0.11
-  flutter_svg: ^1.1.6
+  flutter_svg: ^2.0.6
   flutter_easyloading: ^3.0.5
-  carousel_indicator: ^1.0.6
-  liquid_swipe: ^3.0.0
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   dio: ^4.0.6
@@ -51,10 +48,9 @@ dependencies:
   intl: ^0.18.0
   shared_preferences: ^2.0.17
   logger: ^1.1.0
-  flutter_html: ^3.0.0-beta.1
   youtube_player_flutter: ^8.1.2
-  html: ^0.15.2
-  flutter_html_all: ^3.0.0-beta.1
+  flutter_widget_from_html: ^0.10.1
+  image_picker: ^0.8.7+5
 
 
 dev_dependencies:
