--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   youtube_player_flutter: ^8.1.2
   flutter_widget_from_html: ^0.10.1
   image_picker: ^0.8.7+5
+  chewie: ^1.5.0
 
 
 dev_dependencies:
