--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_widget_from_html: ^0.10.1
   image_picker: ^0.8.7+5
   chewie: ^1.5.0
+  url_launcher: ^6.1.11
 
 
 dev_dependencies:
